<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Custom Back Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/selectionBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circular_ripple"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:outlineProvider="background"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back"
            app:tint="?android:textColorPrimary" />

        <TextView
            android:id="@+id/selectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_option"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Content Text -->
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/selectionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="10dp"
                android:padding="18dp"
                android:text="@string/permissions_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Dynamic Content -->
            <LinearLayout
                android:id="@+id/dynamicContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>